Add Two Sections in Home Page

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -17,6 +17,11 @@
 @import '../components/HeroSection/heroSection';
 @import '../components/HeroSection/heroSection-responsive';
 @import '../components/TodayGadgetsSection/todayGadgetsSection.scss';
+@import '../components/BestDeals/bestDeals';
+@import '../components/DealOfTheDaySection/dealOfTheDaySection';
+@import '../components/FilterTabs/filterTabs';
+
+
 
 
 .page-test {
