--- a/src/components/SelectMenu/_selectMenu.scss
+++ b/src/components/SelectMenu/_selectMenu.scss
@@ -41,7 +41,7 @@
         border-radius: 0.2em;
         border-top: none;
         overflow-y: auto;
-
+        z-index: 3;
         .dropdown-item {
             padding: 10px;
             border-bottom: 1px solid #73737328;
