--- a/src/components/HeroSection/_heroSection.scss
+++ b/src/components/HeroSection/_heroSection.scss
@@ -1,80 +1,88 @@
 .home-page {
     .hero-section {
-        width: 100%;
-        padding: 2rem 0;
-        height: 95vh;
-        background-image: url('../assets/images/Hero-background.jpg') ;
+        min-height: 100vh;
+        background-image: url("../assets/images/Hero-background.jpg");
         background-size: cover;
-        background-position: center;
         display: flex;
         justify-content: center;
         align-items: center;
+        position: relative;
         &-content {
-            width: 100%;
-            height:100%;
             display: flex;
-            gap: 1rem;
+            justify-content: center;
             align-items: center;
-            justify-content: space-between;
-            img {
-                width: 250px;
-            }
-            .img-one {
-                animation: img-from-left 0.8s 0.8s both;
-            }
-            .img-two {
-                animation: img-from-right 0.8s 1.6s both;
-            }
+            gap: 1rem;
             &-title {
+                flex-grow: 1;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                align-items: center;
                 text-align: center;
-                h2 {
+                & > span {
+                    font-size: 1.4rem;
                     color: $main-color;
-                    font-weight: 100;
-                    font-size: 1.8rem;
-                    animation: img-from-top 1s 2.4s both;
+                    text-transform: capitalize;
+                    animation: img-from-top 0.7s 1.9s linear both;
                 }
-                h3{
-                    margin-top: 16px;
-                    color: #1c1c24;
-                    font-size: 3rem;
-                    animation: img-from-down 1s 2.4s both;
+                & > h3 {
+                    color: #2d2d2d;
+                    font-size: 2.4rem;
+                    animation: img-from-bottom 0.7s 1.9s linear both;
                 }
             }
             &-btns {
-                margin-top: 24px;
                 display: flex;
-                gap: 16px;
-                justify-content: center;
+                align-items: center;
+                gap: 1rem;
                 button {
-                    background-color: transparent;
-                    border-color: $main-color;
+                    background: transparent;
+                    border-color:$main-color ;
                     color: $main-color;
-                    transition: 0.4s;
-                    position: relative;
+                    transition: 0.3s;
                     &:hover {
-                        background-color: #000;
-                        color: #fff;
+                        background-color: #2d2d2d;
+                        color: #FFF;
                         border: none;
                     }
                 }
                 .btn-one {
-                    animation: img-from-left 1s 3.4s both;
+                    animation: img-from-left 0.7s 2.6s linear both ;
                 }
                 .btn-two {
-                    animation: img-from-right 1s 3.4s both;
+                    animation: img-from-right 0.7s 2.6s linear both ;
                 }
+            }
+        }
+
+        .img-one {
+            animation: img-from-left 0.8s 0.3s linear both;
+        }
+        .img-two {
+            animation: img-from-right 0.8s 1.1s linear both;
+        }
+        .navigation-btns {
+            position: absolute;
+            bottom: 70px;
+            display: flex;
+            align-items: center;
+            gap: 8rem;
+            svg {
+                font-size: 2rem;
+                color: $main-color;
+                cursor: pointer;
+                z-index: 3;
             }
         }
     }
 }
-
 
 @keyframes img-from-left {
     0% {
         transform: translateX(-100%);
         opacity: 0;
     }
-    100%{
+    100% {
         transform: translateX(0);
         opacity: 1;
     }
@@ -84,7 +92,7 @@
         transform: translateX(100%);
         opacity: 0;
     }
-    100%{
+    100% {
         transform: translateX(0);
         opacity: 1;
     }
@@ -94,18 +102,56 @@
         transform: translateY(-100%);
         opacity: 0;
     }
-    100%{
+    100% {
         transform: translateY(0);
         opacity: 1;
     }
 }
-@keyframes img-from-down {
+@keyframes img-from-bottom {
     0% {
         transform: translateY(100%);
         opacity: 0;
     }
-    100%{
+    100% {
         transform: translateY(0);
         opacity: 1;
+    }
+}
+
+// Start Media Query
+
+@media(max-width:767px){
+    .home-page {
+        .hero-section {
+            &-content {
+                flex-direction: column;
+                padding-block: 4rem;
+            }
+            .img-one {
+                display: none;
+            }
+            .navigation-btns {
+                display: none;
+            }
+        }
+    }
+}
+@media(min-width:768px){
+    .home-page {
+        .hero-section {
+            .img-one {
+                display: none;
+            }
+        }
+    }
+}
+
+@media(min-width:1024px) {
+    .home-page {
+        .hero-section {
+            .img-one {
+                display: block;
+            }
+        }
     }
 }
