--- a/src/components/HeroSection/_heroSection.scss
+++ b/src/components/HeroSection/_heroSection.scss
@@ -37,20 +37,20 @@
                 gap: 1rem;
                 button {
                     background: transparent;
-                    border-color:$main-color ;
+                    border-color: $main-color;
                     color: $main-color;
                     transition: 0.3s;
                     &:hover {
                         background-color: #2d2d2d;
-                        color: #FFF;
+                        color: #fff;
                         border: none;
                     }
                 }
                 .btn-one {
-                    animation: img-from-left 0.7s 2.6s linear both ;
+                    animation: img-from-left 0.7s 2.6s linear both;
                 }
                 .btn-two {
-                    animation: img-from-right 0.7s 2.6s linear both ;
+                    animation: img-from-right 0.7s 2.6s linear both;
                 }
             }
         }
@@ -120,7 +120,7 @@
 
 // Start Media Query
 
-@media(max-width:767px){
+@media (max-width: 767px) {
     .home-page {
         .hero-section {
             &-content {
@@ -136,7 +136,7 @@
         }
     }
 }
-@media(min-width:768px){
+@media (min-width: 768px) {
     .home-page {
         .hero-section {
             .img-one {
@@ -146,7 +146,7 @@
     }
 }
 
-@media(min-width:1024px) {
+@media (min-width: 1024px) {
     .home-page {
         .hero-section {
             .img-one {
