--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -17,8 +17,10 @@
 @import '../components/HeroSection/heroSection';
 @import '../components/TodayGadgetsSection/todayGadgetsSection.scss';
 @import '../components/BestDeals/bestDeals';
+@import '../components/contactBar/contactBar';
 @import '../components/DealOfTheDaySection/dealOfTheDaySection';
 @import '../components/FilterTabs/filterTabs';
+@import '../pages/FAQPage/faqPage';
 
 
 
