--- a/src/components/FilterTabs/_filterTabs.scss
+++ b/src/components/FilterTabs/_filterTabs.scss
@@ -68,3 +68,11 @@
             align-items: center;
     }
 }
+
+@media (max-width: 400px){
+    .filter-tabs{
+        span{
+            font-size: 1rem;
+        }
+    }
+}
