--- a/src/pages/HomePage/_homePage-responsive.scss
+++ b/src/pages/HomePage/_homePage-responsive.scss
@@ -12,7 +12,7 @@
         .contact-bar{
             &-layout {
                 width: 100%;
-                padding: 2rem;
+                padding: 3rem 0;
                 &.send-email {
                     
                 }
