Edit media for navbar

--- a/src/layout/1-Navbar/_navbar-responsive.scss
+++ b/src/layout/1-Navbar/_navbar-responsive.scss
@@ -37,3 +37,20 @@
         }
     }
 }
+
+@media(max-width:550px){
+    header {
+        nav {
+            .nav-section {
+                .nav-icons {
+                    .liked-icon, .cart-icon {
+                        display: none;
+                    }
+                    .menuIcon {
+                        margin: 0;
+                    }
+                }
+            }
+        }
+    }
+}
