Add Contact Page

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -21,6 +21,7 @@
 @import '../components/DealOfTheDaySection/dealOfTheDaySection';
 @import '../components/FilterTabs/filterTabs';
 @import '../pages/FAQPage/faqPage';
+@import '../pages/ContactPage/contactPage';
 
 
 
