--- a/src/style/global/_responsive.scss
+++ b/src/style/global/_responsive.scss
@@ -1,8 +1,8 @@
-@media (max-width: 1320px) {
-    .container{
-        margin-inline:6rem ;
-    }
-}
+// @media (max-width: 1320px) {
+//     .container{
+//         margin-inline:6rem ;
+//     }
+// }
 @media (max-width: 1240px) {
     .x-padding {
         padding-inline: 4rem;
