Add Terms And Conditions Page

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -22,6 +22,7 @@
 @import '../components/FilterTabs/filterTabs';
 @import '../pages/FAQPage/faqPage';
 @import '../pages/ContactPage/contactPage';
+@import '../pages/TermsAndConditionsPage/termsAndConditions';
 
 
 
