--- a/src/pages/TermsAndConditionsPage/_termsAndConditions.scss
+++ b/src/pages/TermsAndConditionsPage/_termsAndConditions.scss
@@ -2,9 +2,10 @@
     .terms-and-conditions-container {
         margin-block: 60px;
         margin: 60px auto;
+        padding: 3rem;
         width: 80%;
         border: 1px solid #ccc;
-        padding: 3rem;
+        border-radius: 8px;
         h6 {
             font-size: 16px;
             margin-bottom: 40px;
@@ -12,6 +13,10 @@
         p {
             font-size: 14px;
             margin-bottom: 16px;
+            color: #555;
+            strong {
+                color: #000;
+            }
         }
     }
 }
