Create Special Heading

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -20,9 +20,11 @@
 @import '../components/contactBar/contactBar';
 @import '../components/DealOfTheDaySection/dealOfTheDaySection';
 @import '../components/FilterTabs/filterTabs';
+@import '../components/SpecialHeading/specialHeading';
 @import '../pages/FAQPage/faqPage';
 @import '../pages/ContactPage/contactPage';
 @import '../pages/TermsAndConditionsPage/termsAndConditions';
+@import '../pages/AboutPage/aboutUsPage';
 
 
 
