Add AboutUs Page

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -21,6 +21,8 @@
 @import '../components/DealOfTheDaySection/dealOfTheDaySection';
 @import '../components/FilterTabs/filterTabs';
 @import '../components/SpecialHeading/specialHeading';
+@import '../components/StatisticComponent/statisticComponent';
+@import '../components/TeamMemberCard/teamMemberCard';
 @import '../pages/FAQPage/faqPage';
 @import '../pages/ContactPage/contactPage';
 @import '../pages/TermsAndConditionsPage/termsAndConditions';
