--- a/src/components/BestDeals/_bestDeals.scss
+++ b/src/components/BestDeals/_bestDeals.scss
@@ -10,6 +10,7 @@
             flex-shrink: 0;
             img {
                 width: 100%;
+                object-fit: cover;
             }
         }
         .best-deals-products {
