--- a/src/components/SpecialHeading/_specialHeading.scss
+++ b/src/components/SpecialHeading/_specialHeading.scss
@@ -1,6 +1,6 @@
 .special-heading {
-    padding: 10px;
     position: relative;
+    z-index: 1;
     h2,h3 {
         text-transform: capitalize;        
     }
@@ -8,15 +8,41 @@
         font-size: 16px;
         font-weight: 100;
         color: $main-color;
-        margin-bottom: 16px;
+        margin-bottom: 20px;
     }
     span {
         text-transform: uppercase;
         font-weight: 900;
-        font-size: 100px;
+        font-size: 130px;
         color: #f5f4f4;
         position: absolute;
         z-index: -1;
-        top: -50%;
+        top: 0;
+        margin-top: -65px;
+    }
+}
+
+@media(max-width:1330px){
+    .special-heading {
+        span {
+            font-size: 110px;
+        }
+    }
+}
+@media(max-width:550px){
+    .special-heading {
+        span {
+            font-size: 80px;
+        }
+    }
+}
+@media(max-width:400px){
+    .special-heading {
+        span {
+            display: none;
+        }
+        h3 {
+            font-size: 1.7rem;
+        }
     }
 }
