--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -24,6 +24,7 @@
 @import '../components/StatisticComponent/statisticComponent';
 @import '../components/TeamMemberCard/teamMemberCard';
 @import '../pages/FAQPage/faqPage';
+@import '../pages/ProductsPage/productsPage';
 @import '../pages/ContactPage/contactPage';
 @import '../pages/TermsAndConditionsPage/termsAndConditions';
 @import '../pages/AboutPage/aboutUsPage';
