--- a/src/components/EmailSubmitInput/_emailSubmitInput.scss
+++ b/src/components/EmailSubmitInput/_emailSubmitInput.scss
@@ -9,7 +9,7 @@
     input {
         width: 100%;
         height: 45px;
-        padding: 10px;
+        padding: 10px 120px 10px 10px;
         border: none;
         outline: 0;
     }
