--- a/src/components/ProductCard/_productCard.scss
+++ b/src/components/ProductCard/_productCard.scss
@@ -67,6 +67,7 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+        text-align: center;
         &-title {
             font-size: 0.8rem;
             color: #999;
