--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -23,6 +23,7 @@
 @import '../components/SpecialHeading/specialHeading';
 @import '../components/StatisticComponent/statisticComponent';
 @import '../components/TeamMemberCard/teamMemberCard';
+@import '../components/ProductsByCategory/productsByCategory';
 @import '../pages/FAQPage/faqPage';
 @import '../pages/ProductsPage/productsPage';
 @import '../pages/ContactPage/contactPage';
