--- a/src/style/global/_reset.scss
+++ b/src/style/global/_reset.scss
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Rubik , sans-serif;
+    font-family: Rubik , sans-serif, 'Courier New', Courier;
     line-height: 1.4;
 }
 
@@ -10,21 +10,24 @@
     font-family: Rubik;
     src: url("../assets/Fonts/Rubik-Regular.woff") format("woff"), url("../assets/Fonts/Rubik-Regular.woff2") format("woff2");
     font-weight: 200;
+    font-display: swap;
 }
 @font-face {
     font-family: Rubik;
     src: url("../assets/Fonts/Rubik-Medium.woff") format('woff'),url("../assets/Fonts/Rubik-Medium.woff2") format('woff2');
     font-weight: 600;
+    font-display: swap;
 }
 @font-face {
     font-family: Rubik;
     src: url("../assets/Fonts/Rubik-SemiBold.woff") format('woff'), url('../assets/Fonts/Rubik-SemiBold.woff2') format('woff2');
     font-weight: 800;
+    font-display: swap;
 }
 @font-face {
     font-family: Rubik-Wet;
     src: url("../assets/Fonts/RubikWetPaint-Regular.woff") format('woff'), url('../assets/Fonts/RubikWetPaint-Regular.woff2') format('woff2');
-
+    font-display: swap;
 }
 
 a {
