--- a/src/pages/ShopPage/_shopPage.scss
+++ b/src/pages/ShopPage/_shopPage.scss
@@ -101,7 +101,7 @@
                 justify-content: space-between;
                 background-color: #f5f5f5;
                 width: 100%;
-                height: 100px;
+                height: 80px;
                 border-radius: 10px;
                 .heading h4 {
                     font-size: 2rem;
@@ -110,22 +110,18 @@
                 .display-btn {
                     display: flex;
                     align-items: center;
-                    gap: 20px;
+                    gap: 10px;
+                    svg {
+                        font-size: 32px;
+                        cursor: pointer;
+                        transition: 0.3s;
+                        &.active {
+                            color: $main-color;
+                        }
+                    }
                     span {
                         font-size: 1.2rem;
-                    }
-                    .icons {
-                        display: flex;
-                        align-items: center;
-                        gap: 10px;
-                        svg {
-                            font-size: 28px;
-                            cursor: pointer;
-                            transition: 0.3s;
-                            &.active {
-                                color: $main-color;
-                            }
-                        }
+                        text-transform: capitalize;
                     }
                 }
             }
