--- a/src/components/ProductCard/_productCard.scss
+++ b/src/components/ProductCard/_productCard.scss
@@ -101,7 +101,7 @@
             width: 20px;
             height: 20px;
             border-radius: 50%;
-            color: yellow;
+            color: gold;
         }
     }
 }
