--- a/src/pages/ShopPage/_shopPage.scss
+++ b/src/pages/ShopPage/_shopPage.scss
@@ -2,8 +2,12 @@
     &-container {
         display: flex;
         gap: 32px;
+        .container {
+            margin-bottom: 200px;
+        }
         .filter-menu-container {
             padding-top: 10px;
+            margin-bottom: 300px;
             display: flex;
             width: 24rem;
             flex-direction: column;
@@ -29,7 +33,6 @@
                 padding: 30px 10px;
                 border-right: 1px solid rgba(0, 0, 0, 0.2);
                 border-left: 1px solid rgba(0, 0, 0, 0.2);
-                // border-radius: 8px;
                 &-categories {
                     &-heading {
                         padding: 10px;
@@ -77,7 +80,8 @@
                                     display: flex;
                                     align-items: center;
                                     gap: 10px;
-                                    input,label {
+                                    input,
+                                    label {
                                         cursor: pointer;
                                     }
                                 }
@@ -110,6 +114,7 @@
             }
         }
         .shop-page-content {
+            margin-bottom: 300px;
             display: flex;
             flex-direction: column;
             width: 100%;
@@ -141,6 +146,45 @@
                     span {
                         font-size: 1.2rem;
                         text-transform: capitalize;
+                    }
+                }
+            }
+            &-products {
+                margin-top: 4rem;
+                display: flex;
+                flex-wrap: wrap;
+                gap: 1rem;
+                &.display-grid {
+                    .product-card {
+                        width: calc((100% - 3rem) / 4);
+                        height: auto;
+                        &-image {
+                            height: 10rem;
+                        }
+                        &-content {
+                            align-items: center;
+                        }
+                    }
+                }
+                &.display-block {
+                    .product-card {
+                        width: calc((100% - 1rem) / 2);
+                        flex-direction: row;
+                        align-items: center;
+                        height: 10rem;
+                        position: relative;
+                        &-rating {
+                            position: absolute;
+                            // top: 10px;
+                        }
+                        &-image {
+                            width: 10rem;
+                            height: 100%;
+                            // position: static;
+                            &-icons {
+                                gap: 0;
+                            }
+                        }
                     }
                 }
             }
