--- a/src/pages/ShopPage/_shopPage.scss
+++ b/src/pages/ShopPage/_shopPage.scss
@@ -145,6 +145,51 @@
                     }
                 }
             }
+            .shop-page-content-products-box {
+                display: flex;
+                flex-direction: column;
+                gap: 3rem;
+                .pagination-btns-container {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 1.2rem;
+                    .pagination-btn {
+                        width: 6rem;
+                        padding: 8px;
+                        background-color: $main-color;
+                        color: #FFF;
+                        text-align: center;
+                        border-radius: 8px;
+                        cursor: pointer;
+                        text-transform: capitalize;
+                        transition: 0.3s;
+                        &:hover {
+                            background-color: #004fa9;
+                        }
+                    }
+                    .pagination-page-num{
+                        display: flex;
+                        gap: 0.8rem;
+                        span {
+                            width: 2rem;
+                            height: 2rem;
+                            display: inline-flex;
+                            justify-content: center;
+                            align-items: center;
+                            border:1px solid rgba($color: #000000, $alpha: 0.2);
+                            cursor: pointer;
+                            border-radius: 8px;
+                            color: $main-color;
+                            transition: 0.3s;
+                            &:hover {
+                                background-color: $main-color;
+                                color: #FFF;
+                            }
+                        }
+                    }
+                }
+            }
             &-products {
                 margin-top: 4rem;
                 display: flex;
