--- a/src/pages/ShopPage/_shopPage.scss
+++ b/src/pages/ShopPage/_shopPage.scss
@@ -53,6 +53,22 @@
                     }
                     &-items {
                         padding: 10px;
+                        &-name {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 1rem;
+                            label {
+                                font-weight: 600;
+                            }
+                            input {
+                                // margin-top: 1rem;
+                                width: 100%;
+                                padding: 0.4rem 0.8rem;
+                                outline: 0;
+                                border: 1px solid rgba($color: #000000, $alpha: 0.2);
+                                border-radius: 1rem;
+                            }
+                        }
                         &-price {
                             display: flex;
                             flex-direction: column;
