--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -25,6 +25,7 @@
 @import '../components/TeamMemberCard/teamMemberCard';
 @import '../components/ProductsByCategory/productsByCategory';
 @import '../components/ProductPopUp/productPopUp';
+@import '../components/Loader/loader';
 @import '../pages/FAQPage/faqPage';
 @import '../pages/ProductsPage/productsPage';
 @import '../pages/ShopPage/shopPage';
